# deepresearch

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  engine.py  main.py  schema.py
app/agents/: critic.py  orchestrator.py  reporter.py  scraper.py  searcher.py  synthesizer.py
app/utils/: callbacks.py  llm.py  rag.py  rate_limiter.py  tracer.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_critic.py  test_engine.py  test_orchestrator.py  test_rag.py  test_structured_io.py
