[project]
name = "deepresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.136.1",
    "langgraph>=1.1.9",
    "pydantic>=2.13.3",
    "tavily-python>=0.7.23",
    "trafilatura>=2.0.0",
    "uvicorn>=0.46.0",
]
