[project]
name = "deepresearch"
version = "0.1.0"
description = "AI-powered deep research for user queries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.136.1",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tavily-python>=0.7.23",
    "trafilatura>=2.0.0",
    "uvicorn>=0.46.0",
    "wandb>=0.26.1",
    "weave>=0.52.37",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
